# FLorist

./: .buildinfo  .dockerignore  .eslintignore  .gitignore  .pre-commit-config.yaml  .prettierignore  CONTRIBUTING.md  Dockerfile.client  Dockerfile.server  README.md  api.html  docker-compose-client.yaml  docker-compose-server.yaml  genindex.html  index.html  jest.config.ts  objects.inv  package-lock.json  package.json  page.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  tsconfig.json  user_guide.html
.github/: pull_request_template.md
.github/workflows/: docs_build.yml  docs_deploy.yml  integration_tests.yaml  integration_tests.yml  publish.yml  python_tests.yaml  static_code_checks.yaml  tests.yaml  unit_tests.yaml
_modules/: index.html
_modules/florist/api/: client.html  index.html  server.html
_sources/: index.md.txt  user_guide.md.txt
_sources/reference/api/: florist.api.auth.rst.txt  florist.api.auth.token.rst.txt  florist.api.client.rst.txt  florist.api.clients.clients.rst.txt  florist.api.clients.common.rst.txt  florist.api.clients.mnist.rst.txt  florist.api.clients.optimizers.rst.txt  florist.api.clients.rst.txt  florist.api.db.client_entities.rst.txt  florist.api.db.config.rst.txt  florist.api.db.entities.rst.txt  florist.api.db.rst.txt  florist.api.db.server_entities.rst.txt  florist.api.index.rst.txt  florist.api.launchers.launch.rst.txt  florist.api.launchers.local.rst.txt  florist.api.launchers.rst.txt  florist.api.models.abstract.rst.txt  florist.api.models.mnist.rst.txt  florist.api.models.models.rst.txt  florist.api.models.rst.txt  florist.api.monitoring.logs.rst.txt  florist.api.monitoring.metrics.rst.txt  florist.api.monitoring.rst.txt  florist.api.routes.client.auth.rst.txt  florist.api.routes.client.rst.txt  florist.api.routes.rst.txt  florist.api.routes.server.auth.rst.txt  florist.api.routes.server.job.rst.txt  florist.api.routes.server.rst.txt  florist.api.routes.server.status.rst.txt  florist.api.routes.server.training.rst.txt  florist.api.rst.txt  florist.api.server.rst.txt  florist.api.servers.common.rst.txt  florist.api.servers.config_parsers.rst.txt  florist.api.servers.launch.rst.txt  florist.api.servers.local.rst.txt  florist.api.servers.models.rst.txt  florist.api.servers.rst.txt  (+62 more)
api/: index.py
app/: layout.tsx  page.tsx  sidebar.tsx
assets/css/: material-dashboard.css
docs/source/: api.rst  conf.py  index.md  user_guide.md
florist/: __init__.py  tsconfig.json
florist/api/: __init__.py  client.py  index.py  launch.py  server.py
florist/api/auth/: __init__.py  token.py
florist/api/clients/: __init__.py  clients.py  common.py  enum.py  mnist.py  optimizers.py
florist/api/db/: __init__.py  client_entities.py  config.py  entities.py  server_entities.py
florist/api/launchers/: __init__.py  launch.py  local.py
florist/api/models/: __init__.py  abstract.py  common.py  enum.py  mnist.py  models.py
florist/api/monitoring/: __init__.py  logs.py  metrics.py
florist/api/routes/: __init__.py  job.py
florist/api/servers/: __init__.py  common.py  config_parsers.py  exception.py  exceptions.py  launch.py  local.py  models.py  strategies.py  utils.py
florist/app/: auth.tsx  client_imports.tsx  hooks.tsx  layout.tsx  page.tsx  sidebar.tsx
florist/app/(root)/: layout.tsx  page.tsx  sidebar.tsx
florist/app/jobs/: definitions.tsx  hooks.tsx  new.tsx  page.tsx
florist/app/login/: layout.tsx  page.tsx
metrics/: 2a11f9d4-cc3d-4c15-8d4b-07e82fae22aa.json  832ee4cf-0bf4-428d-9d43-44dbc66f6de4.json  a85191b3-9954-472c-8858-d3f9ced02e49.json  aucgwucc.json  dthobrmj.json  hugncryx.json  kqrzqagk.json  krwvahol.json  vlsqfwyz.json
reference/api/: florist.api.auth.html  florist.api.auth.token.html  florist.api.client.html  florist.api.clients.clients.html  florist.api.clients.common.html  florist.api.clients.html  florist.api.clients.mnist.html  florist.api.clients.optimizers.html  florist.api.db.client_entities.html  florist.api.db.config.html  florist.api.db.entities.html  florist.api.db.html  florist.api.db.server_entities.html  florist.api.html  florist.api.index.html  florist.api.launchers.html  florist.api.launchers.launch.html  florist.api.launchers.local.html  florist.api.models.abstract.html  florist.api.models.html  florist.api.models.mnist.html  florist.api.models.models.html  florist.api.monitoring.html  florist.api.monitoring.logs.html  florist.api.monitoring.metrics.html  florist.api.routes.client.auth.html  florist.api.routes.client.html  florist.api.routes.html  florist.api.routes.server.auth.html  florist.api.routes.server.html  florist.api.routes.server.job.html  florist.api.routes.server.status.html  florist.api.routes.server.training.html  florist.api.server.html  florist.api.servers.common.html  florist.api.servers.config_parsers.html  florist.api.servers.html  florist.api.servers.launch.html  florist.api.servers.local.html  florist.api.servers.models.html  (+63 more)
(+148 files in other folders)
